[package]
name = "rust_poc"
version = "0.1.0"
edition = "2021"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] } # Use the runtime and tls configuration that fits your needs.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
testcontainers = "0.11"
once_cell = "1.7" # for lazy_static
ctor = "0.1"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] } # Use the runtime and tls configuration that fits your needs.
